--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ name: 桑弧蓬矢射四方
 description: iphyer's personal blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://github.com/iphyer/iphyer.github.io/blob/master/images/blog.png?raw=true
+        #iphyer.github.io/images/blog.png
+      
 #
 # Flags below are optional
 #
