--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ permalink: /blog/:year/:month/:day/:title/ #/:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
+kramdown: kramdown
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
