--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ footer-links:
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: iphyersblog
+disqus_show_comment_count: true
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-33194427-1
