--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: 桑弧蓬矢射四方
+name: "桑弧蓬矢射四方"
 
 # Short bio or description (displayed in the header)
 description: iphyer's personal blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/iphyer/iphyer.github.io/blob/master/images/blog.png?raw=true
-        #iphyer.github.io/images/blog.png
       
 #
 # Flags below are optional
