--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "桑弧蓬矢射四方"
+name: New
 
 # Short bio or description (displayed in the header)
 description: iphyer's personal blog
