--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: "桑弧蓬矢射四方"
 description: iphyer's Blog Website
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/iphyer/iphyer.github.io/raw/master/images/blog.png
 
 #
 # Flags below are optional
