--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ permalink: /:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
+kramdown: kramdown
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
+  input:
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
