--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: iphyer/iphyer.github.io
+  github: iphyer/iphyer.github.io/
   instagram:
   linkedin:
   pinterest:
@@ -41,7 +41,7 @@ google_analytics: UA-33194427-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://iphyer.github.io
+url: https://iphyer.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
