--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: iphyer/iphyer.github.io/
+  github: iphyer/iphyer.github.io
   instagram:
   linkedin:
   pinterest:
