--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ footer-links:
 disqus: iphyersblog
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-33194427-1
+google_analytics: G-G1ZZ04TLK8
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
